Using convenience factory methods for collections. JEP 269